--- a/css/index.css
+++ b/css/index.css
@@ -184,18 +184,14 @@ header .header_wrap{
 }
 .mobileMenu ul li{
     padding:5% 5%;
+    color:#fff;
 }
 .mobileMenu li > div{
-    opacity:0;
-    height:0;
+    display:none;
+    height:100%;
     line-height:55px;
     margin-top:7%;
     margin-left:20px;
-    transition:.5s;
-}
-.mobileMenu div.show{
-    opacity:1;
-    height:100%;
 }
 .mobileMenu a{
     color:#fff;
@@ -594,9 +590,9 @@ aside.show{
     width:7%;
 }
 .slideImg{
-    display:flex;
+    /* display:flex;
     flex-direction:column;
-    
+     */
 }
 .slideImg img{
     width:100%;
@@ -890,18 +886,21 @@ footer div:nth-of-type(2) ul li a{
         position:fixed;
     }
     header .burger{
-        transform:scale(0.7);
-        top:8px;
+        transform:scale(1);
+        top:24px;
+    }
+    .header_wrap figure{
+        width:35%;
     }
     .mobileMenu{
-        top:30px;
+        top:60px;
     }
     .mobileMenu.show{
-        top:30px;
+        top:60px;
         width:60%;
     }
     .visual{
-        height:50vw;
+        height:60vh;
     }
     .visual .visualContent{
         width:100%;
@@ -912,29 +911,31 @@ footer div:nth-of-type(2) ul li a{
         width:100%;
     }
     .visualContent .visualText h1{
-        font-size:1.2em;
+        font-size:2.8em;
     }
     .visualContent .visualText p{
-        font-size:0.8rem;
+        font-size:1.8em;
     }
-    .visual video{
+    .visualText a{
+        display:block;
+        width:80%;
+        margin-left:10%;
+    }
+    .visualText span{
+        font-size:1em;
+    }
+    .visualContent video{
         display:none;
     }
     .faction_title p{
         font-size:1.5em;
     }
-    .faction_wrap div figure:nth-of-type(1){
-        display:none;
-    }
-    .faction_wrap{
-        display:flex;
-        flex-wrap:wrap;
-        margin:0 auto;
-        padding:5% 0 0 5%; 
+    .faction_wrap a img{
+        width:100%;
     }
     .faction_wrap div{
-        width:120px;
-        height:120px;
+        width:100%;
+        height:35vh;
     }
     .faction_wrap div a{
         width:100%;
@@ -953,11 +954,17 @@ footer div:nth-of-type(2) ul li a{
     .guide h2{
         font-size:1.5em;
     }
-    .playerGuide figcaption{
-       margin-right:35px; 
+    .playerGuide{
+        display:block;
     }
-    .pgRight figcaption{
-        margin-right:20px;
+    .playerGuide figcaption{
+       font-size:2em;
+    }
+    .playerGuide .pgLeft figcaption{
+        left:20%;
+    }
+    .playerGuide .pgRight figcaption{
+        left:9%;
     }
     .playerGuide figcaption h3{
         font-size:0.7em;
@@ -979,8 +986,11 @@ footer div:nth-of-type(2) ul li a{
         margin-left:30px;
     }
     footer div:nth-of-type(1) p{
-        margin-left:0;
+        margin-left:10%;
         margin-bottom:10px;
+    }
+    footer div:nth-of-type(1) figure{
+        margin-left:14%;
     }
     .footerMenu ul:nth-of-type(2){
         display:none;
@@ -995,50 +1005,59 @@ footer div:nth-of-type(2) ul li a{
     }
     header{
         width:100%;
+        position:fixed;
     }
     header .burger{
-        transform:scale(0.7);
-        top:8px;
+        transform:scale(1);
+        top:24px;
     }
-    
+    .header_wrap figure{
+        width:35%;
+    }
+    .mobileMenu{
+        top:60px;
+    }
+    .mobileMenu.show{
+        top:60px;
+        width:60%;
+    }
     .visual{
-        height:50vw;
+        height:60vh;
     }
     .visual .visualContent{
         width:100%;
         left:0;
         top:30%;
     }
+    .visual .visualText{
+        width:100%;
+    }
     .visualContent .visualText h1{
-        font-size:1em;
+        font-size:2.8em;
     }
     .visualContent .visualText p{
-        font-size:0.6rem;
+        font-size:1.8em;
     }
-    .visualContent .visualText a:nth-of-type(1){
-        margin-right:0;
+    .visualText a{
+        display:block;
+        width:80%;
+        margin-left:10%;
     }
-    .visualContent .visualText a{
-        font-size:0.5rem;
+    .visualText span{
+        font-size:1em;
     }
     .visualContent video{
         display:none;
     }
     .faction_title p{
-        font-size:1em;
+        font-size:1.5em;
     }
-    .faction_wrap div figure:nth-of-type(1){
-        display:none;
-    }
-    .faction_wrap{
-        display:flex;
-        flex-wrap:wrap;
-        margin:0 auto;
-        padding:5% 0 0 12%; 
+    .faction_wrap a img{
+        width:100%;
     }
     .faction_wrap div{
-        width:100px;
-        height:100px;
+        width:100%;
+        height:35vh;
     }
     .faction_wrap div a{
         width:100%;
@@ -1057,120 +1076,17 @@ footer div:nth-of-type(2) ul li a{
     .guide h2{
         font-size:1.5em;
     }
-    .playerGuide figcaption{
-       margin-right:35px; 
-    }
-    .pgRight figcaption{
-        margin-right:20px;
-    }
-    .playerGuide figcaption h3{
-        font-size:0.7em;
-    }
-    .playerGuide figcaption a{
-        display:none;
-    }
-    .showCase{
-        padding:0 10%;
-    }
-    .showCase .sideImg{
-        margin-top:50px;
-    }
-    .showCase .shipInfo{
-        height:300px
-    }
-    .showCase .shipInfo table{
-        height:30px;
-    }
-    .showCase .shipInfo figure{
-        margin-top:20px;
-    }
-    footer div:nth-of-type(1){
+    .playerGuide{
         display:block;
-        margin-left:50px;
-    }
-    footer div:nth-of-type(1) p{
-        margin-left:0;
-        margin-bottom:10px;
-    }
-    .footerMenu ul:nth-of-type(2){
-        display:none;
-    }
-}
-/* --------------------- 360 --------------------- */
-@media(max-width:360px){
-    body{
-        overflow-x:visible;
-        overflow-y:visible;
-    }
-    header{
-        width:100%;
-    }
-    header .burger{
-        transform:scale(0.7);
-        top:8px;
-    }
-    
-    .visual{
-        height:50vw;
-    }
-    .visual .visualContent{
-        width:70%;
-        left:30%;
-        top:30%;
-    }
-    .visualContent .visualText h1{
-        font-size:1em;
-    }
-    .visualContent .visualText p{
-        font-size:0.6rem;
-    }
-    .visualContent .visualText a:nth-of-type(1){
-        margin-right:0;
-    }
-    .visualContent .visualText a{
-        font-size:0.5rem;
-    }
-    .visual video{
-        display:none;
-    }
-    .faction_title p{
-        font-size:1em;
-    }
-    .faction_wrap div figure:nth-of-type(1){
-        display:none;
-    }
-    .faction_wrap{
-        display:flex;
-        flex-wrap:wrap;
-        margin:0 auto;
-        padding:5% 0 0 12%; 
-    }
-    .faction_wrap div{
-        width:100px;
-        height:100px;
-    }
-    .faction_wrap div a{
-        width:100%;
-        height:100%;
-    }
-    .faction_wrap div figure .icon{
-        width:50%;
-        height:100%;
-    }
-    .faction_wrap div .front{
-        background:transparent
-    }
-    .guide{
-        padding:0 5%;
-    }
-    .guide h2{
-        font-size:1.5em;
     }
     .playerGuide figcaption{
-       margin-right:35px; 
+       font-size:2em;
     }
-    .pgRight figcaption{
-        margin-right:20px;
+    .playerGuide .pgLeft figcaption{
+        left:20%;
+    }
+    .playerGuide .pgRight figcaption{
+        left:6%;
     }
     .playerGuide figcaption h3{
         font-size:0.7em;
@@ -1192,8 +1108,132 @@ footer div:nth-of-type(2) ul li a{
         margin-left:30px;
     }
     footer div:nth-of-type(1) p{
-        margin-left:0;
+        margin-left:8%;
         margin-bottom:10px;
+    }
+    footer div:nth-of-type(1) figure{
+        margin-left:10%;
+    }
+    .footerMenu ul:nth-of-type(2){
+        display:none;
+    }
+}
+/* --------------------- 360 --------------------- */
+@media(max-width:360px){
+    body{
+        overflow-x:visible;
+        overflow-y:visible;
+    }
+    header{
+        width:100%;
+        position:fixed;
+    }
+    header .burger{
+        transform:scale(1);
+        top:24px;
+    }
+    .header_wrap figure{
+        width:35%;
+    }
+    .mobileMenu{
+        top:60px;
+    }
+    .mobileMenu.show{
+        top:60px;
+        width:60%;
+    }
+    .visual{
+        height:60vh;
+    }
+    .visual .visualContent{
+        width:100%;
+        left:0;
+        top:30%;
+    }
+    .visual .visualText{
+        width:100%;
+    }
+    .visualContent .visualText h1{
+        font-size:2.8em;
+    }
+    .visualContent .visualText p{
+        font-size:1.4em;
+    }
+    .visualText a{
+        display:block;
+        width:80%;
+        margin-left:10%;
+    }
+    .visualText span{
+        font-size:1em;
+    }
+    .visualContent video{
+        display:none;
+    }
+    .faction_title p{
+        font-size:1.5em;
+    }
+    .faction_wrap a img{
+        width:100%;
+    }
+    .faction_wrap div{
+        width:100%;
+        height:35vh;
+    }
+    .faction_wrap div a{
+        width:100%;
+        height:100%;
+    }
+    .faction_wrap div figure .icon{
+        width:50%;
+        height:100%;
+    }
+    .faction_wrap div .front{
+        background:transparent
+    }
+    .guide{
+        padding:0 5%;
+    }
+    .guide h2{
+        font-size:1.5em;
+    }
+    .playerGuide{
+        display:block;
+    }
+    .playerGuide figcaption{
+       font-size:2em;
+    }
+    .playerGuide .pgLeft figcaption{
+        left:18%;
+    }
+    .playerGuide .pgRight figcaption{
+        left:4%;
+    }
+    .playerGuide figcaption h3{
+        font-size:0.7em;
+    }
+    .playerGuide figcaption a{
+        display:none;
+    }
+    .showCase{
+        padding:0 10%;
+    }
+    .showCase .sideImg{
+        margin-top:50px;
+    }
+    .showCase .shipInfo figure{
+        margin-top:20px;
+    }
+    footer div:nth-of-type(1){
+        display:block;
+        margin-left:30px;
+    }
+    footer div:nth-of-type(1) p{
+        margin-left:8%;
+        margin-bottom:10px;
+    }
+    footer div:nth-of-type(1) figure{
+        margin-left:10%;
     }
     .footerMenu ul:nth-of-type(2){
         display:none;
