--- a/css/index.css
+++ b/css/index.css
@@ -900,7 +900,7 @@ footer div:nth-of-type(2) ul li a{
         width:60%;
     }
     .visual{
-        height:80vh;
+        height:150vw;
     }
     .visual .visualContent{
         width:100%;
@@ -1022,7 +1022,7 @@ footer div:nth-of-type(2) ul li a{
         width:60%;
     }
     .visual{
-        height:80vh;
+        height:150vw
     }
     .visual .visualContent{
         width:100%;
@@ -1143,7 +1143,7 @@ footer div:nth-of-type(2) ul li a{
         width:60%;
     }
     .visual{
-        height:80vh;
+        height:150vw;
     }
     .visual .visualContent{
         width:100%;
