--- a/css/index.css
+++ b/css/index.css
@@ -801,10 +801,12 @@ footer div:nth-of-type(2) ul li a{
     .faction_wrap{
         flex-wrap:wrap;
     }
+    .faction_wrap a img{
+        width:100%;
+    }
     .faction_wrap div{
-        width:45%;
-        height:35vh;
-        margin:35px 10px 35px 10px;
+        width:48%;
+        height:45vw;
     }
     .guide{
         padding:5% 0;
@@ -900,7 +902,7 @@ footer div:nth-of-type(2) ul li a{
         width:60%;
     }
     .visual{
-        height:150vw;
+        height:80vh;
     }
     .visual .visualContent{
         width:100%;
@@ -935,7 +937,7 @@ footer div:nth-of-type(2) ul li a{
     }
     .faction_wrap div{
         width:100%;
-        height:35vh;
+        height:45vw;
     }
     .faction_wrap div a{
         width:100%;
@@ -1022,7 +1024,7 @@ footer div:nth-of-type(2) ul li a{
         width:60%;
     }
     .visual{
-        height:150vw
+        height:150vw;
     }
     .visual .visualContent{
         width:100%;
@@ -1057,7 +1059,7 @@ footer div:nth-of-type(2) ul li a{
     }
     .faction_wrap div{
         width:100%;
-        height:35vh;
+        height:45vw;
     }
     .faction_wrap div a{
         width:100%;
@@ -1178,7 +1180,7 @@ footer div:nth-of-type(2) ul li a{
     }
     .faction_wrap div{
         width:100%;
-        height:35vh;
+        height:45vw;
     }
     .faction_wrap div a{
         width:100%;
