--- a/css/index.css
+++ b/css/index.css
@@ -929,7 +929,7 @@ footer div:nth-of-type(2) ul li a{
         font-size:2em;
     }
     .visualContent video{
-        /* display:none; */
+        display:none;
         opacity:0;
     }
     .faction_title p{
@@ -1060,7 +1060,7 @@ footer div:nth-of-type(2) ul li a{
         font-size:1em;
     }
     .visualContent video{
-        /* display:none; */
+        display:none;
         opacity:0;
     }
     .faction_title p{
@@ -1190,7 +1190,7 @@ footer div:nth-of-type(2) ul li a{
         font-size:1em;
     }
     .visualContent video{
-        /* display:none; */
+        display:none;
         opacity:0;
     }
     .faction_title p{
