--- a/css/index.css
+++ b/css/index.css
@@ -930,7 +930,7 @@ footer div:nth-of-type(2) ul li a{
     }
     .visualContent video{
         display:none;
-        opacity:0;
+        /* opacity:0; */
     }
     .faction_title p{
         font-size:1.5em;
@@ -1061,7 +1061,7 @@ footer div:nth-of-type(2) ul li a{
     }
     .visualContent video{
         display:none;
-        opacity:0;
+        /* opacity:0; */
     }
     .faction_title p{
         font-size:1.5em;
@@ -1191,7 +1191,7 @@ footer div:nth-of-type(2) ul li a{
     }
     .visualContent video{
         display:none;
-        opacity:0;
+        /* opacity:0; */
     }
     .faction_title p{
         font-size:1.5em;
