--- a/css/download.css
+++ b/css/download.css
@@ -269,11 +269,14 @@ section{
 }
 .box div{
     display:none;
+    opacity:0;
 }
-.box .active{
+.box div.active{
     display:block;
+    opacity:0;
 }
 .box .tab-con{
+    transition:.5s;
     width:100%;
     height:100%;
 }
