--- a/css/index.css
+++ b/css/index.css
@@ -164,11 +164,9 @@ header .header_wrap{
     right:-60%;
     top:50px;
     transition:.5s;
-    /* display:none; */
     opacity:0;
 }
 .mobileMenu.show{
-    /* display:block; */
     opacity:1;
     z-index:5;
     right:-10%;
@@ -179,7 +177,6 @@ header .header_wrap{
 .mobileMenu ul{
     background-color:#000;
     height:100vh;
-    /* margin-top:10px; */
     padding:5%;
 }
 .mobileMenu ul li{
@@ -202,7 +199,6 @@ header .header_wrap{
 .visual{
     width:100%;
     height:50vw;
-    /* height:100vh; */
     position:relative;
     left:0;
     top:0;
@@ -926,6 +922,9 @@ footer div:nth-of-type(2) ul li a{
     }
     .visualContent video{
         display:none;
+        opacity:0;
+        width:0;
+        height:0;
     }
     .faction_title p{
         font-size:1.5em;
@@ -1056,6 +1055,9 @@ footer div:nth-of-type(2) ul li a{
     }
     .visualContent video{
         display:none;
+        opacity:0;
+        width:0;
+        height:0;
     }
     .faction_title p{
         font-size:1.5em;
@@ -1185,6 +1187,9 @@ footer div:nth-of-type(2) ul li a{
     }
     .visualContent video{
         display:none;
+        opacity:0;
+        width:0;
+        height:0;
     }
     .faction_title p{
         font-size:1.5em;
